2019-09-19  Yannick Moy  <moy@adacore.com>

	* gcc-interface/Make-lang.in: Remove references to sem_spark.
	* sem_spark.adb, sem_spark.ads: Remove unit.

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_attr.adb (Is_Inline_Floating_Point_Attribute): Treat
	Machine_Rounding as an alias for Rounding.
	* sem_res.adb (Simplify_Type_Conversion): Likewise.

2019-09-19  Gary Dismukes  <dismukes@adacore.com>

	* exp_unst.adb (Unnest_Subprogram): Bypass the transformation of
	up-level references unless Opt.Generate_C_Code is enabled.

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_ch4.adb (Expand_Array_Equality): If optimization is
	enabled, generate a simple conjunction of comparisons for the
	specific case of constrained 1-dimensional 2-element arrays.
	Fix formatting.

2019-09-19  Piotr Trojanek  <trojanek@adacore.com>

	* exp_dbug.ads, exp_dbug.adb (Get_Homonym_Number): Remove.
	(Append_Homonym_Number): Use Homonym_Number instead of
	Get_Homonym_Number.
	* exp_util.ads, exp_util.adb (Homonym_Number): Mirror style of
	the removed Get_Homonym_Number routine, i.e. initialize local
	objects at declaration and refine the type of result.
	* sem_util.adb (Add_Homonym_Suffix): Use Homonym_Number instead
	of Get_Homonym_Number.

2019-09-19  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch13.adb (Check_Aspect_At_End_Of_Declarations): Simplify
	handling of expressions in predicates when the context is a
	generic unit.

2019-09-19  Bob Duff  <duff@adacore.com>

	* sem_attr.adb (Resolve_Attribute): Make sure the secondary
	stack is properly managed in the case of a 'Range attribute in a
	loop.

2019-09-19  Raphael Amiard  <amiard@adacore.com>

	* libgnat/a-cfhase.ads (Set): Add comments to public primitives.

2019-09-19  Raphael Amiard  <amiard@adacore.com>

	* libgnat/a-cbhama.ads, libgnat/a-cbhase.ads,
	libgnat/a-chtgop.ads (Clear): Refine comments

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>
