@@ -1,3 +1,7 @@
+2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/access9.adb: New testcase.
+
 2019-09-19  Ed Schonberg  <schonberg@adacore.com>
 
 	* gnat.dg/predicate14.adb, gnat.dg/predicate14.ads: New
